[package]
name = "rebaser"
version = "0.1.0"
authors = ["Andrei Silviu Dragnea <andreisilviudragnea@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
octocrab = "0.42.0"
config = "0.14.0"
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }
regex = "1.10.6"
toml = "0.8.19"
url = "2.5.2"
log = "0.4.22"
simple_logger = "5.0.0"
